Import of NATG/Hash-AutoHash-Args-1.01 from CPAN.
gitpan-cpan-distribution: Hash-AutoHash-Args
gitpan-cpan-version:      1.01
gitpan-cpan-path:         NATG/Hash-AutoHash-Args-1.01.tar.gz
gitpan-cpan-author:       NATG
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -3,3 +3,7 @@ Revision history for Hash-AutoHash-Args
 1.00    2009-10-27
         First version, released on an unsuspecting world.
 
+1.01	2009-10-28
+	Fixed prereqs in Build.PL
+
+
