--- a/Changes
+++ b/Changes
@@ -1,16 +1,20 @@
 Revision history for Hash-AutoHash-Args
 
-1.00    2009-10-27
-        First version, released on an unsuspecting world.
-
-1.01	2009-10-28
-	Fixed prereqs in Build.PL
-
+1.10    2009-10-30
+	This should be stable release assuming CPAN testers find no problems
+        Fixed Build prereqs
+        Refactored perl 5.10 dependent test code
+	Reversed order of revisions in this file
+	
 1.02	2009-10-29
 	Documentation changes
 	  Changed module names AVP_Single, AVP_Multi to AVPairsSingle, AVPairsMulti
           in SEE ALSO to better match CPAN naming style
 	In V0, added 'package ...' before POD so CPAN will connect POD to main class
       
+1.01	2009-10-28
+	Fixed prereqs in Build.PL
 
+1.00    2009-10-27
+        First version, released on an unsuspecting world.
 
