--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Hash-AutoHash-Args
 
+1.12    2010-02-23
+	Minor documentation cleanup and reformatting
+
 1.11    2009-12-31
 	Fixed VERSION number problem in V0.pm found by Jerome Quelin
         Fixed bug in growing single-valued slot into multi-valued slot when
