--- a/Changes
+++ b/Changes
@@ -1,24 +1,28 @@
 Revision history for Hash-AutoHash-Args
 
+1.16	2012-11-DD
+	Fixed tests that were failing because of hash key randomization 
+	introduced in 5.16
+
 1.15	2012-09-18
 	Fixed Hash::AutoHash prerequisite in Build.PL. Needs 1.15
 	Reverted version numbers in helper, tie, and V0 package. PAUSE upload
-	  wasn't failing - it was just a warning
+	wasn't failing - it was just a warning
 
 1.14	2012-09-02
 	Fixed problem with version numbers in helper, tie, and V0 packages 
-	  causing PAUSE upload to fail
+	causing PAUSE upload to fail
 
 1.13	2012-09-02
-	INCOMPATIBLE CHANGE: no longer possible to use method notation for keys
+	- INCOMPATIBLE CHANGE: no longer possible to use method notation for keys
 	  with the same names as methods inherited from UNIVERSAL (the base  
 	  class of everything). These are  'can', 'isa', 'DOES', and 'VERSION'.
 	  The reason is that as of Perl 5.9.3, calling UNIVERSAL methods as
 	  functions is deprecated and developers are encouraged to use method
 	  form instead. Previous versions of module are incompatible with CPAN
 	  modules that adopt this style.
-	Added test for version number in POD
-	Changes to Build.PL
+	- Added test for version number in POD
+	- Changes to Build.PL
 	  Removed redundant 'dist_version_from' param
           Added Module::Build to configure_requires
 	  Changed create_makefile_pl from deprecated 'passthrough' to 'small'
@@ -29,7 +33,7 @@ Revision history for Hash-AutoHash-Args
 1.11    2009-12-31
 	Fixed VERSION number problem in V0.pm found by Jerome Quelin
         Fixed bug in growing single-valued slot into multi-valued slot when
-	  first value was object
+	first value was object
 	
 1.10    2009-10-30
 	This should be stable release assuming CPAN testers find no problems
@@ -39,8 +43,8 @@ Revision history for Hash-AutoHash-Args
 	
 1.02	2009-10-29
 	Documentation changes
-	  Changed module names AVP_Single, AVP_Multi to AVPairsSingle, AVPairsMulti
-          in SEE ALSO to better match CPAN naming style
+	  - Changed module names AVP_Single, AVP_Multi to AVPairsSingle, AVPairsMulti
+            in SEE ALSO to better match CPAN naming style
 	In V0, added 'package ...' before POD so CPAN will connect POD to main class
       
 1.01	2009-10-28
