Import of NATG/Hash-AutoHash-Args-1.18_01 from CPAN.
gitpan-cpan-distribution: Hash-AutoHash-Args
gitpan-cpan-version:      1.18_01
gitpan-cpan-path:         NATG/Hash-AutoHash-Args-1.18_01.tar.gz
gitpan-cpan-author:       NATG
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Hash-AutoHash-Args
 
+1.18_01	2013-09-29
+	No functional changes
+	Updated depdendencies
+        Fixed boilerplate & pod tests
+
 1.17	2013-12-25
 	Fixed a test I missed last time that was failing because of hash key  
 	randomization introduced in 5.16
